src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__ref_to_ref_type.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: Some(
                    TypeParams {
                        params: [
                            Lifetime(
                                LifetimeParam {
                                    name: Spanned {
                                        node: SymbolU32 {
                                            value: 2,
                                        },
                                        span: Span {
                                            start: 5,
                                            end: 7,
                                            start_line: 1,
                                            start_col: 6,
                                        },
                                    },
                                    bounds: [],
                                    span: Span {
                                        start: 5,
                                        end: 7,
                                        start_line: 1,
                                        start_col: 6,
                                    },
                                },
                            ),
                            Lifetime(
                                LifetimeParam {
                                    name: Spanned {
                                        node: SymbolU32 {
                                            value: 3,
                                        },
                                        span: Span {
                                            start: 9,
                                            end: 11,
                                            start_line: 1,
                                            start_col: 10,
                                        },
                                    },
                                    bounds: [],
                                    span: Span {
                                        start: 9,
                                        end: 11,
                                        start_line: 1,
                                        start_col: 10,
                                    },
                                },
                            ),
                        ],
                        span: Span {
                            start: 4,
                            end: 12,
                            start_line: 1,
                            start_col: 5,
                        },
                    },
                ),
                params: [
                    Param {
                        qualifier: None,
                        pattern: Pattern {
                            kind: Ident {
                                by_ref: false,
                                mutable: false,
                                name: Spanned {
                                    node: SymbolU32 {
                                        value: 4,
                                    },
                                    span: Span {
                                        start: 13,
                                        end: 14,
                                        start_line: 1,
                                        start_col: 14,
                                    },
                                },
                                subpattern: None,
                            },
                            span: Span {
                                start: 13,
                                end: 14,
                                start_line: 1,
                                start_col: 14,
                            },
                        },
                        ty: Type {
                            kind: Reference {
                                lifetime: Some(
                                    Spanned {
                                        node: SymbolU32 {
                                            value: 2,
                                        },
                                        span: Span {
                                            start: 17,
                                            end: 19,
                                            start_line: 1,
                                            start_col: 18,
                                        },
                                    },
                                ),
                                mutable: false,
                                inner: Type {
                                    kind: Reference {
                                        lifetime: Some(
                                            Spanned {
                                                node: SymbolU32 {
                                                    value: 3,
                                                },
                                                span: Span {
                                                    start: 21,
                                                    end: 23,
                                                    start_line: 1,
                                                    start_col: 22,
                                                },
                                            },
                                        ),
                                        mutable: false,
                                        inner: Type {
                                            kind: Path(
                                                TypePath {
                                                    segments: [
                                                        TypePathSegment {
                                                            name: Spanned {
                                                                node: SymbolU32 {
                                                                    value: 5,
                                                                },
                                                                span: Span {
                                                                    start: 24,
                                                                    end: 27,
                                                                    start_line: 1,
                                                                    start_col: 25,
                                                                },
                                                            },
                                                            args: None,
                                                        },
                                                    ],
                                                    span: Span {
                                                        start: 24,
                                                        end: 27,
                                                        start_line: 1,
                                                        start_col: 25,
                                                    },
                                                },
                                            ),
                                            span: Span {
                                                start: 24,
                                                end: 27,
                                                start_line: 1,
                                                start_col: 25,
                                            },
                                        },
                                    },
                                    span: Span {
                                        start: 20,
                                        end: 27,
                                        start_line: 1,
                                        start_col: 21,
                                    },
                                },
                            },
                            span: Span {
                                start: 16,
                                end: 27,
                                start_line: 1,
                                start_col: 17,
                            },
                        },
                        span: Span {
                            start: 13,
                            end: 27,
                            start_line: 1,
                            start_col: 14,
                        },
                    },
                ],
                return_type: Some(
                    Type {
                        kind: Reference {
                            lifetime: Some(
                                Spanned {
                                    node: SymbolU32 {
                                        value: 2,
                                    },
                                    span: Span {
                                        start: 33,
                                        end: 35,
                                        start_line: 1,
                                        start_col: 34,
                                    },
                                },
                            ),
                            mutable: false,
                            inner: Type {
                                kind: Path(
                                    TypePath {
                                        segments: [
                                            TypePathSegment {
                                                name: Spanned {
                                                    node: SymbolU32 {
                                                        value: 5,
                                                    },
                                                    span: Span {
                                                        start: 36,
                                                        end: 39,
                                                        start_line: 1,
                                                        start_col: 37,
                                                    },
                                                },
                                                args: None,
                                            },
                                        ],
                                        span: Span {
                                            start: 36,
                                            end: 39,
                                            start_line: 1,
                                            start_col: 37,
                                        },
                                    },
                                ),
                                span: Span {
                                    start: 36,
                                    end: 39,
                                    start_line: 1,
                                    start_col: 37,
                                },
                            },
                        },
                        span: Span {
                            start: 32,
                            end: 39,
                            start_line: 1,
                            start_col: 33,
                        },
                    },
                ),
                effects: None,
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Unary {
                                    op: Deref,
                                    operand: Expr {
                                        kind: Path(
                                            ExprPath {
                                                segments: [
                                                    ExprPathSegment {
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 4,
                                                            },
                                                            span: Span {
                                                                start: 43,
                                                                end: 44,
                                                                start_line: 1,
                                                                start_col: 44,
                                                            },
                                                        },
                                                        args: None,
                                                    },
                                                ],
                                                span: Span {
                                                    start: 43,
                                                    end: 44,
                                                    start_line: 1,
                                                    start_col: 44,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 43,
                                            end: 44,
                                            start_line: 1,
                                            start_col: 44,
                                        },
                                    },
                                },
                                span: Span {
                                    start: 42,
                                    end: 44,
                                    start_line: 1,
                                    start_col: 43,
                                },
                            },
                        ),
                        span: Span {
                            start: 40,
                            end: 46,
                            start_line: 1,
                            start_col: 41,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 46,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 46,
        start_line: 1,
        start_col: 1,
    },
}
