src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__reference_type.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_fiber: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [
                    Param {
                        qualifier: None,
                        pattern: Pattern {
                            kind: Ident {
                                by_ref: false,
                                mutable: false,
                                name: Spanned {
                                    node: SymbolU32 {
                                        value: 2,
                                    },
                                    span: Span {
                                        start: 5,
                                        end: 6,
                                        start_line: 1,
                                        start_col: 6,
                                    },
                                },
                                subpattern: None,
                            },
                            span: Span {
                                start: 5,
                                end: 6,
                                start_line: 1,
                                start_col: 6,
                            },
                        },
                        ty: Type {
                            kind: Reference {
                                lifetime: None,
                                mutable: false,
                                inner: Type {
                                    kind: Path(
                                        TypePath {
                                            segments: [
                                                TypePathSegment {
                                                    name: Spanned {
                                                        node: SymbolU32 {
                                                            value: 3,
                                                        },
                                                        span: Span {
                                                            start: 9,
                                                            end: 12,
                                                            start_line: 1,
                                                            start_col: 10,
                                                        },
                                                    },
                                                    args: None,
                                                },
                                            ],
                                            span: Span {
                                                start: 9,
                                                end: 12,
                                                start_line: 1,
                                                start_col: 10,
                                            },
                                        },
                                    ),
                                    span: Span {
                                        start: 9,
                                        end: 12,
                                        start_line: 1,
                                        start_col: 10,
                                    },
                                },
                            },
                            span: Span {
                                start: 8,
                                end: 12,
                                start_line: 1,
                                start_col: 9,
                            },
                        },
                        span: Span {
                            start: 5,
                            end: 12,
                            start_line: 1,
                            start_col: 6,
                        },
                    },
                    Param {
                        qualifier: None,
                        pattern: Pattern {
                            kind: Ident {
                                by_ref: false,
                                mutable: false,
                                name: Spanned {
                                    node: SymbolU32 {
                                        value: 4,
                                    },
                                    span: Span {
                                        start: 14,
                                        end: 15,
                                        start_line: 1,
                                        start_col: 15,
                                    },
                                },
                                subpattern: None,
                            },
                            span: Span {
                                start: 14,
                                end: 15,
                                start_line: 1,
                                start_col: 15,
                            },
                        },
                        ty: Type {
                            kind: Reference {
                                lifetime: None,
                                mutable: true,
                                inner: Type {
                                    kind: Path(
                                        TypePath {
                                            segments: [
                                                TypePathSegment {
                                                    name: Spanned {
                                                        node: SymbolU32 {
                                                            value: 3,
                                                        },
                                                        span: Span {
                                                            start: 22,
                                                            end: 25,
                                                            start_line: 1,
                                                            start_col: 23,
                                                        },
                                                    },
                                                    args: None,
                                                },
                                            ],
                                            span: Span {
                                                start: 22,
                                                end: 25,
                                                start_line: 1,
                                                start_col: 23,
                                            },
                                        },
                                    ),
                                    span: Span {
                                        start: 22,
                                        end: 25,
                                        start_line: 1,
                                        start_col: 23,
                                    },
                                },
                            },
                            span: Span {
                                start: 17,
                                end: 25,
                                start_line: 1,
                                start_col: 18,
                            },
                        },
                        span: Span {
                            start: 14,
                            end: 25,
                            start_line: 1,
                            start_col: 15,
                        },
                    },
                ],
                return_type: None,
                effects: None,
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: None,
                        span: Span {
                            start: 27,
                            end: 29,
                            start_line: 1,
                            start_col: 28,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 29,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 29,
        start_line: 1,
        start_col: 1,
    },
}
