src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__region_block.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Region {
                                    name: None,
                                    body: Block {
                                        statements: [
                                            Let {
                                                pattern: Pattern {
                                                    kind: Ident {
                                                        by_ref: false,
                                                        mutable: false,
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 2,
                                                            },
                                                            span: Span {
                                                                start: 22,
                                                                end: 23,
                                                                start_line: 1,
                                                                start_col: 23,
                                                            },
                                                        },
                                                        subpattern: None,
                                                    },
                                                    span: Span {
                                                        start: 22,
                                                        end: 23,
                                                        start_line: 1,
                                                        start_col: 23,
                                                    },
                                                },
                                                ty: None,
                                                value: Some(
                                                    Expr {
                                                        kind: Call {
                                                            callee: Expr {
                                                                kind: Path(
                                                                    ExprPath {
                                                                        segments: [
                                                                            ExprPathSegment {
                                                                                name: Spanned {
                                                                                    node: SymbolU32 {
                                                                                        value: 3,
                                                                                    },
                                                                                    span: Span {
                                                                                        start: 26,
                                                                                        end: 31,
                                                                                        start_line: 1,
                                                                                        start_col: 27,
                                                                                    },
                                                                                },
                                                                                args: None,
                                                                            },
                                                                        ],
                                                                        span: Span {
                                                                            start: 26,
                                                                            end: 31,
                                                                            start_line: 1,
                                                                            start_col: 27,
                                                                        },
                                                                    },
                                                                ),
                                                                span: Span {
                                                                    start: 26,
                                                                    end: 31,
                                                                    start_line: 1,
                                                                    start_col: 27,
                                                                },
                                                            },
                                                            args: [
                                                                CallArg {
                                                                    name: None,
                                                                    value: Expr {
                                                                        kind: Literal(
                                                                            Literal {
                                                                                kind: Int {
                                                                                    value: 10,
                                                                                    suffix: None,
                                                                                },
                                                                                span: Span {
                                                                                    start: 32,
                                                                                    end: 34,
                                                                                    start_line: 1,
                                                                                    start_col: 33,
                                                                                },
                                                                            },
                                                                        ),
                                                                        span: Span {
                                                                            start: 32,
                                                                            end: 34,
                                                                            start_line: 1,
                                                                            start_col: 33,
                                                                        },
                                                                    },
                                                                    span: Span {
                                                                        start: 32,
                                                                        end: 34,
                                                                        start_line: 1,
                                                                        start_col: 33,
                                                                    },
                                                                },
                                                            ],
                                                        },
                                                        span: Span {
                                                            start: 26,
                                                            end: 35,
                                                            start_line: 1,
                                                            start_col: 27,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 18,
                                                    end: 36,
                                                    start_line: 1,
                                                    start_col: 19,
                                                },
                                            },
                                        ],
                                        expr: Some(
                                            Expr {
                                                kind: Path(
                                                    ExprPath {
                                                        segments: [
                                                            ExprPathSegment {
                                                                name: Spanned {
                                                                    node: SymbolU32 {
                                                                        value: 2,
                                                                    },
                                                                    span: Span {
                                                                        start: 37,
                                                                        end: 38,
                                                                        start_line: 1,
                                                                        start_col: 38,
                                                                    },
                                                                },
                                                                args: None,
                                                            },
                                                        ],
                                                        span: Span {
                                                            start: 37,
                                                            end: 38,
                                                            start_line: 1,
                                                            start_col: 38,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 37,
                                                    end: 38,
                                                    start_line: 1,
                                                    start_col: 38,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 16,
                                            end: 40,
                                            start_line: 1,
                                            start_col: 17,
                                        },
                                    },
                                },
                                span: Span {
                                    start: 9,
                                    end: 40,
                                    start_line: 1,
                                    start_col: 10,
                                },
                            },
                        ),
                        span: Span {
                            start: 7,
                            end: 42,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 42,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 42,
        start_line: 1,
        start_col: 1,
    },
}
